--- a/todoapp/templates/index.html
+++ b/todoapp/templates/index.html
@@ -5,6 +5,24 @@
       .hidden {
         display: none;
       }
+      ul {
+          list-style: none;
+          padding: 0;
+          margin: 0;
+          width: 300px;
+      }
+      li {
+        clear: both;
+      }
+      li button { 
+        -webkit-appearance: none;
+        border: none;
+        outline: none;
+        color: red;
+        float: right;
+        cursor: pointer;
+        font-size: 20px;
+      }
     </style>
   </head>
   <body>
@@ -15,10 +33,39 @@
     </form>
     <ul id = "todos">
       {% for d in data %}
-      <li>{{ d.description }}</li>
+      <li>
+        <input class="check-completed" data-id="{{ d.id }}" type="checkbox" {% if d.completed %} checked {% endif %}/>
+         {{d.description }}
+         <button class="delete-button" data-id="{{ d.id }}">&cross;</button>
+      </li>
       {% endfor %}
     </ul>
     <script>
+      const checkboxes = document.querySelectorAll('.check-completed');
+      for(let i = 0; i<checkboxes.length; i++){
+          const checkbox = checkboxes[i];
+          checkbox.onchange = function(e){
+              console.log('event', e);
+              const newCompleted = e.target.checked;
+              const todoId = e.target.dataset['id'];
+              fetch('todos/' + todoId + '/set-completed', {
+                  method: 'POST',
+                  body: JSON.stringify({
+                    'completed' : newCompleted
+                  }),
+                  headers: {
+                    'Content-Type': 'application/json',
+                 }
+              })
+              .then(function() {
+                document.getElementById('error').className = 'hidden';
+              })
+              .catch(function() {
+                document.getElementById('error').className = '';
+              })
+          }
+      }
+
       const descInput = document.getElementById('description');
       document.getElementById('form').onsubmit = function(e) {
         e.preventDefault();
@@ -36,8 +83,22 @@
         .then(response => response.json())
         .then(jsonResponse => {
           console.log('response', jsonResponse);
-          li = document.createElement('li');
-          li.innerText = desc;
+          const li = document.createElement('li');
+          const checkbox = document.createElement('input');
+          checkbox.className = 'check-completed';
+          checkbox.type = 'checkbox';
+          checkbox.setAttribute('data-id', jsonResponse.id);
+          li.appendChild(checkbox);
+
+          const text = document.createTextNode(' ' + jsonResponse.description);
+          li.appendChild(text);
+
+          const deleteBtn = document.createElement('button');
+          deleteBtn.className = 'delete-button';
+          deleteBtn.setAttribute('data-id', jsonResponse.id);
+          deleteBtn.innerHTML = '&cross;';
+          li.appendChild(deleteBtn);
+
           document.getElementById('todos').appendChild(li);
           document.getElementById('error').className = 'hidden';
         })
@@ -45,6 +106,21 @@
           document.getElementById('error').className = '';
         })
       }
+
+      const deleteBtns = document.querySelectorAll('.delete-button');
+        for(let i=0; i<deleteBtns.length; i++){
+          const btn = deleteBtns[i];
+          btn.onclick = function(e){
+            const todoId = e.target.dataset['id'];
+            fetch('/todos/'+todoId,{
+              method: 'DELETE'
+            })
+            .then(function() {
+              const item = e.target.parentElement;
+              item.remove();
+            })
+          }
+        }
     </script>
   </body>
 </html>
